[package]
name = "grideye_tui"
version = "0.1.0"
edition = "2021"
authors = ["prace@srbpavel.cz <prace@srbpavel.cz>"]

[dependencies]
log = "0.4"
env_logger = "0.10.0"
crossterm = "0.26.1"
rumqttc = "0.10.0"
#chrono = "0.4.23"

[dependencies.tui]
version = "0.19"
default-features = false
features = ['crossterm']

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]
