[package]
name = "grideye_tui"
version = "0.1.0"
edition = "2021"
authors = ["prace@srbpavel.cz <prace@srbpavel.cz>"]

[dependencies]
toml-cfg = "0.1.3"
log = "0.4"
env_logger = "0.10.0"
crossterm = "0.26.1"
rumqttc = "0.10.0"
chrono = "0.4.26"
bytes = "1.4.0"
simplelog = "0.12.1"

[dependencies.tui]
version = "0.19"
default-features = false
features = ['crossterm']

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]

# https://github.com/johnthagen/min-sized-rust
# https://doc.rust-lang.org/cargo/reference/profiles.html#default-profiles  
#
# be aware we have it 10x smaller but verify what it does with the speed !!!
#
[profile.release]
strip = true #automaticaly strip symbols from binary
opt-level = "s" #size
lto = true
codegen-units = 1
